- Corrections for clipPath width

--- a/style.css
+++ b/style.css
@@ -158,7 +158,7 @@ body {
 	position: absolute;
 	transform: translate(-50%, -50%);
 	pointer-events: none;
-	transition: transform 0.3s ease-in-out, background 0.3s ease-in-out;
+	transition: transform 0.4s ease-in-out, background 0.4s ease-in-out;
 	transform-origin: 80% 80%;
 }
 .cursor.nav-active {
